Fixed the issue of poster clipping from top

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -375,6 +375,8 @@ body{
 }
 
 .Cardposter_popular {
+    display: flex;
+    justify-content: center;
   width: 100%;
   height: 10rem;
   margin-top: 20px;
